fixed logos and page alignment content

--- a/src/assets/menu.css
+++ b/src/assets/menu.css
@@ -44,10 +44,10 @@
 }
 /* this is img element that is the header logo */
 .header-logo {
-  margin: 4px 6px;
-  padding: 10px 144px 10px 3px;
-  min-width: 174px;
-
+  margin-top: 56px;
+  width: 70vw;
+  max-width: 434px;
+  height: auto;
 }
 .header-logo-link {
   display: flex;
@@ -128,7 +128,7 @@ main {
 }
 
 /* this media query sets the point where the layout transitions from top bar to hamburger */
-@media (min-width: 640px) {
+@media (min-width: 880px) {
   /* this makes the top bar menu items go across in a row on desktop */
   nav.main-nav {
     display: flex;
@@ -163,5 +163,10 @@ main {
   /* this is the styling that is applied to the menu links on desktop */
   .nav-items-list a {
     font-size: 1.5rem;
+  }
+
+  .header-logo { 
+    width: 436px;
+    height: auto;
   }
 }
