--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,136 +1,173 @@
 body {
-    font-family: "Kanit", Verdana, Geneva, Tahoma, sans-serif;
-    margin: 0%;
+  font-family: "Kanit", Verdana, Geneva, Tahoma, sans-serif;
+  margin: 0%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 40px;
+}
+
+.home main {
+    padding-bottom: 0;
 }
 
 .logo1 {
-    margin: 4px 6px;
-    padding: 10px 144px 10px 3px;
-    min-width: 174px;
-    
+  margin: 4px 6px;
+  padding: 10px 144px 10px 3px;
+  min-width: 174px;
 }
 
 .menu {
-    position: relative;
-    float: right;
-    padding: 18px;
-    justify-content: flex-end;
+  position: relative;
+  float: right;
+  padding: 18px;
+  justify-content: flex-end;
 }
 
 .spot-bg {
-    background: url('imageofspot.jpg');
-    background-size: cover;
-    background-attachment: fixed;
-    width: 100%;
-    min-height: 183px;
-    height: 33vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background: url("imageofspot.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  width: 100%;
+  min-height: 183px;
+  height: 33vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
-    font-size: 40px;
-    font-weight: 600;
-    text-transform: uppercase;
-    text-align: center;
-    background-color: white;
-    padding: 14px 35px;
-    max-height: 147px;
-    z-index: 1;
+  font-size: 40px;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-align: center;
+  background-color: white;
+  padding: 14px 35px;
+  max-height: 147px;
+  z-index: 1;
 }
 
 a {
-    text-decoration: none;
-    text-align: center;
-    color: black;
+  text-decoration: none;
+  text-align: center;
+  color: black;
 }
 
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
-
 .open {
-    padding-right: 68px;
+  padding-right: 68px;
+  font-size: 20px;
+  font-weight: 300;
+  margin: 0;
+  text-align: center;
+  padding-top: 10px;
+}
+
+.list {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+ul {
+  padding-inline-start: 20px;
+  padding-inline-end: 20px;
+}
+
+.colorbar {
+  width: 294px;
+  height: 5px;
+  background: rgb(212, 52, 144);
+  background: linear-gradient(
+    90deg,
+    rgba(212, 52, 144, 1) 0%,
+    rgba(231, 230, 20, 1) 50%,
+    rgba(248, 154, 66, 1) 100%
+  );
+  margin: auto;
+}
+.map {
+  border-color: black;
+  border-width: 4px;
+  display: flex;
+  justify-content: center;
+  flex: 1.5;
+  padding-bottom: 20px;
+}
+
+.spot-bgbottom {
+  background: url("imageofspot.jpg");
+  background-size: 100%;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 4vh;
+  flex-grow: 1;
+}
+
+footer {
+  margin: 0;
+  display: flex;
+  background: black;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
+}
+
+.footerlogo {
+  padding: 0px 0px 0px 0px;
+  background-color: black;
+}
+
+.footertext {
+  color: white;
+  font-size: 18px;
+  font-weight: 300;
+  margin: 0%;
+  background-color: black;
+  padding: 10px;
+}
+
+.h1secondary {
+  color: #fff;
+  background-color: black;
+  font-family: Kanit;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  width: 100%;
+}
+
+ .aboutusp {
+  font-size: 20px;
+  font-weight: 300;
+  margin: 0;
+  text-align: left;
+  padding-top: 10px;
+  width: 400px;
+ }
+
+ .obstaclesp {
     font-size: 20px;
     font-weight: 300;
     margin: 0;
     text-align: center;
     padding-top: 10px;
-}
-
-.list {
-    text-align: center;
-    font-size: 24px;
-    font-weight: 500;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-ul {
-    padding-inline-start: 20px;
-    padding-inline-end: 20px;
-}
-
-.colorbar{
-    width: 294px; 
-    height: 5px;
-    background: rgb(212,52,144);
-    background: linear-gradient(90deg, rgba(212,52,144,1) 0%, rgba(231,230,20,1) 50%, rgba(248,154,66,1) 100%);
-    margin: auto;
-}
-.map {
-    border-color: black;
-    border-width: 4px;
-    display: flex;
-    justify-content: center;
-    flex: 1.5;
-    padding-bottom: 20px;
-}
-
-.spot-bgbottom {
-    background: url('imageofspot.jpg');
-    background-size: 100%;
-    background-attachment: fixed;
-    width: 100%;
-    min-height: 50px;
-    height: 4vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-footer {
-    margin: 0;
-    right: 100%;
-    left: 100%;
-}
-
-.footerlogo {
-    padding: 0px 0px 0px 0px;
-    position: absolute;
-    background-color: black;
-} 
-
-.footertext {
-    color: white;
-    font-size: 18px;
-    font-weight: 300;
-    margin:0%;
-    background-color: black;
-    padding: 3%;
-    text-align: center;
-}
-
-.h1secondary {
-    color: #FFF;
-    background-color: black;
-    font-family: Kanit;
-    font-size: 30px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-}
-
+    width: 400px;
+ }
